--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Titulo Nuevo Modificado</h1>
+    <form action="#" method="get">
+<Input type="button" value="Enviar">
+</form>
 
 </body>
 </html>
