--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Titulo Nuevo Modificado</h1>
+    <input type="text" name="name" id="first name">
     <form action="#" method="get">
 <Input type="button" value="Enviar">
 </form>
