--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Titulo Nuevo Modificado</h1>
     <input type="text" name="name" id="first name">
+    <input type="text" name="last name" id="last name">
     <form action="#" method="get">
 <Input type="button" value="Enviar">
 </form>
