--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <h1>Titulo Nuevo Modificado</h1>
     <input type="text" name="name" id="first name">
     <input type="text" name="last name" id="last name">
+    <input type="number" name="age" id="age">
     <form action="#" method="get">
 <Input type="button" value="Enviar">
 </form>
