--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Titulo Nuevo Modificado</h1>
-    <input type="texto" name="name" id="first name">
+    <input type="number" name="name" id="first name">
     <input type="text" name="last name" id="last name">
     <input type="number" name="age" id="age">
     <form action="#" method="get">
