--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
     <input type="number" name="name" id="first name">
     <input type="text" name="last name" id="last name">
     <input type="number" name="age" id="age">
+    <input type="number" name="birthday" id="birthday">
     <form action="#" method="get">
 <Input type="button" value="Enviar">
 </form>
