Se agrego video

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <h1>Titulo Nuevo Modificado</h1>
     <input type="text" name="name" id="first name">
     <form action="#" method="get">
+        <video src="mls.mp4"></video>
 <Input type="button" value="Enviar">
 </form>
 
